实现默认框架类